# WisePenCloud-AI

./: .gitignore  Dockerfile  docker-compose-app.legacy-net.yml  docker-compose-app.yml  pyproject.toml
services/wisepen-chat-service/: pyproject.toml
services/wisepen-chat-service/src/chat/: container.py  main.py
services/wisepen-chat-service/src/chat/api/: router.py  vercel_sse_mapper.py
services/wisepen-chat-service/src/chat/application/: chat_context_assembler.py  chat_message_projector.py  chat_turn_coordinator.py  chat_turn_finalizer.py  llm_provider_resolver.py  query_loop_runtime.py  skill_matcher.py  token_counter.py
services/wisepen-common/: pyproject.toml
services/wisepen-common/src/common/: logger.py  observability.py
services/wisepen-common/src/common/cloud/: __init__.py  nacos_client.py  service_discovery.py
services/wisepen-common/src/common/core/config/: bootstrap_settings.py
services/wisepen-common/src/common/http/: rpc_client.py
services/wisepen-common/src/common/kafka/: __init__.py  consumer.py  producer.py
services/wisepen-common/src/common/web/: exception_handlers.py
services/wisepen-mcp-service/: README.md  pyproject.toml
services/wisepen-mcp-service/src/wisepen_mcp/: container.py  main.py
services/wisepen-mcp-service/src/wisepen_mcp/capabilities/skill_creator/: __init__.py  create_skill_info.py  get_skill_info.py  update_skill_info.py  upload_skill_draft_asset.py
services/wisepen-mcp-service/src/wisepen_mcp/core/config/: app_settings.py  bootstrap_settings.py  nacos.py
services/wisepen-mcp-service/src/wisepen_mcp/domain/: error_codes.py
services/wisepen-mcp-service/src/wisepen_mcp/domain/entities/: __init__.py  skill.py
services/wisepen-mcp-service/src/wisepen_mcp/service_client/: __init__.py  ai_asset_service_client.py
(+106 files in other folders)
